# px4_sitl_gazebo

./: CMakeLists.txt  package.xml
.ci/: install_dependencies.sh
.github/workflows/: noetic.yml  ros_package_build.yml
include/: gazebo_motor_model.h  mavlink_interface.h  msgbuffer.h
models/hexa_x_tilt/: hexa_x_tilt.sdf  hexa_x_tilt.urdf
models/iris/: iris.sdf
src/: gazebo_gps_plugin.cpp  gazebo_groundtruth_plugin.cpp  gazebo_lidar_plugin.cpp  gazebo_motor_model.cpp
