<?xml version="1.0"?>
<package format="2">

  <name>mavlink_sitl_gazebo</name>
  <version>1.13.2</version>
  <description>The mavlink_sitl_gazebo package</description>

  <maintainer email="lorenz@px4.io">Lorenz Meier</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/PX4/sitl_gazebo</url>

  <author email="lorenz@px4.io">Lorenz Meier</author>
  <author email="james.goppert@gmail.com">James Goppert</author>

  <test_depend>gtest</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>

  <depend>eigen</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>protobuf-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>mavlink</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>

</package>
